--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.2",
     "react-syntax-highlighter": "^15.5.0",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
