--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "mammoth": "^1.6.0",
-    "pdfjs-dist": "3.11.174",
+    "pdfjs-dist": "^4.10.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
